<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/outer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical">

            <include
                layout="@layout/toolbar"
                android:id="@+id/toolbar"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2dp"
                android:background="@color/offWhite"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:layout_marginTop="@dimen/_30dp"
                android:layout_marginLeft="@dimen/_20dp"
                android:layout_marginRight="@dimen/_20dp"
                app:cardCornerRadius="@dimen/_5dp"
                app:cardBackgroundColor="@color/offWhite">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email_or_mobile_number"
                    android:gravity="center_vertical"
                    android:id="@+id/et_email"
                    android:textSize="@dimen/_14sp"
                    android:maxLength="10"
                    android:background="@null"
                    android:fontFamily="@font/opensans_regular"
                    android:inputType="number"
                    android:paddingStart="@dimen/_10dp"
                    tools:ignore="RtlSymmetry" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:layout_marginLeft="@dimen/_20dp"
                android:layout_marginRight="@dimen/_20dp"
                android:layout_marginTop="@dimen/_15dp"
                app:cardCornerRadius="@dimen/_5dp"
                app:cardBackgroundColor="@color/offWhite">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:fontFamily="@font/opensans_regular"
                    android:paddingEnd="@dimen/_10dp"
                    android:background="@null"
                    android:textSize="@dimen/_14sp"
                    android:drawableEnd="@drawable/ic_password_show"
                    android:gravity="center_vertical"
                    android:id="@+id/et_password"
                    android:paddingStart="@dimen/_10dp"
                    tools:ignore="RtlSymmetry" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:layout_margin="@dimen/_20dp"
                app:cardCornerRadius="@dimen/_5dp"
                android:onClick="onClick"
                android:id="@+id/cv_login"
                app:cardBackgroundColor="@color/colorPrimaryDark">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/opensans_bold"
                    android:gravity="center"
                    android:text="@string/log_in"
                    android:textColor="@android:color/white"
                    tools:ignore="RtlSymmetry" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/appColor"
                android:text="@string/forgot_password"
                android:fontFamily="@font/opensans_regular"
                android:paddingEnd="@dimen/_10dp"
                android:onClick="onClick"
                android:id="@+id/tv_forgot_password"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/_10dp"
                tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:orientation="vertical">

                <View
                    android:id="@+id/view_line"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1dp"
                    android:background="@color/offWhite"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_18sp"
                    android:fontFamily="@font/opensans_bold"
                    android:textColor="@color/colorAccent"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_10dp"
                    android:text="Don't have account ?"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:id="@+id/ll_bottom"
                    android:onClick="onClick"
                    android:layout_marginBottom="@dimen/_200dp"
                    android:padding="@dimen/_10dp"
                    tools:ignore="UselessParent">



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_bold"
                        android:text="@string/register_here"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_regular"
                        android:layout_marginStart="@dimen/_5dp"
                        android:text="@string/sign_up"
                        android:onClick="onClick"
                        android:id="@+id/tv_sign_up"
                        android:textSize="@dimen/_16sp"
                        android:textColor="@color/appColor"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>