<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/outer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2dp"
                android:background="@color/offWhite" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50dp"
                        android:layout_marginLeft="@dimen/_20dp"
                        android:layout_marginTop="@dimen/_30dp"
                        android:layout_marginRight="@dimen/_20dp"
                        app:cardBackgroundColor="@color/offWhite"
                        app:cardCornerRadius="@dimen/_5dp">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:fontFamily="@font/opensans_regular"
                            android:gravity="center_vertical"
                            android:hint="@string/name"
                            android:paddingStart="@dimen/_10dp"
                            android:textSize="@dimen/_14sp"
                            tools:ignore="RtlSymmetry" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50dp"
                        android:layout_marginLeft="@dimen/_20dp"
                        android:layout_marginTop="@dimen/_15dp"
                        android:layout_marginRight="@dimen/_20dp"
                        app:cardBackgroundColor="@color/offWhite"
                        app:cardCornerRadius="@dimen/_5dp">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/inputEmail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:fontFamily="@font/opensans_regular"
                            android:gravity="center_vertical"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:paddingStart="@dimen/_10dp"
                            android:textSize="@dimen/_14sp"
                            tools:ignore="RtlSymmetry" />
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_50dp"
                            android:layout_marginLeft="@dimen/_20dp"
                            android:layout_marginTop="@dimen/_15dp"
                            android:layout_marginRight="@dimen/_10dp"
                            app:cardBackgroundColor="@color/offWhite"
                            app:cardCornerRadius="@dimen/_5dp">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="@dimen/_50dp"
                                android:layout_height="match_parent"
                                android:background="@null"
                                android:fontFamily="@font/opensans_regular"
                                android:gravity="center_vertical"
                                android:paddingStart="@dimen/_10dp"
                                android:text="+91"
                                android:textSize="@dimen/_14sp"
                                tools:ignore="RtlSymmetry" />
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_50dp"
                            android:layout_marginTop="@dimen/_15dp"
                            android:layout_marginEnd="@dimen/_20dp"
                            app:cardBackgroundColor="@color/offWhite"
                            app:cardCornerRadius="@dimen/_5dp">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/inputMobile"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@null"
                                android:fontFamily="@font/opensans_regular"
                                android:gravity="center_vertical"
                                android:hint="@string/phone_number"
                                android:inputType="number"
                                android:maxLength="10"
                                android:paddingStart="@dimen/_10dp"
                                android:textSize="@dimen/_14sp"
                                tools:ignore="RtlSymmetry" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50dp"
                        android:layout_marginLeft="@dimen/_20dp"
                        android:layout_marginTop="@dimen/_15dp"
                        android:layout_marginRight="@dimen/_20dp"
                        app:cardBackgroundColor="@color/offWhite"
                        app:cardCornerRadius="@dimen/_5dp">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/inputPassword"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:drawableEnd="@drawable/ic_password_show"
                            android:fontFamily="@font/opensans_regular"
                            android:gravity="center_vertical"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:paddingStart="@dimen/_10dp"
                            android:paddingEnd="@dimen/_10dp"
                            android:textSize="@dimen/_14sp"
                            tools:ignore="RtlSymmetry" />
                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50dp"
                        android:layout_marginLeft="@dimen/_20dp"
                        android:layout_marginTop="@dimen/_15dp"
                        android:layout_marginRight="@dimen/_20dp"
                        android:visibility="gone"
                        app:cardBackgroundColor="@color/offWhite"
                        app:cardCornerRadius="@dimen/_5dp">

                        <Spinner
                            android:id="@+id/tvstate"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_50dp"
                            android:background="@color/offWhite"
                            android:hint="@string/enter_state"
                            android:padding="10dp"
                            android:spinnerMode="dropdown"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            tools:ignore="UnusedAttribute" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50dp"
                        android:layout_marginLeft="@dimen/_20dp"
                        android:layout_marginTop="@dimen/_15dp"
                        android:visibility="gone"
                        android:layout_marginRight="@dimen/_20dp"
                        app:cardBackgroundColor="@color/offWhite"
                        app:cardCornerRadius="@dimen/_5dp">

                        <Spinner
                            android:id="@+id/tvcity"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_50dp"
                            android:background="@color/offWhite"
                            android:hint="@string/enter_city_name"
                            android:padding="10dp"
                            android:spinnerMode="dropdown"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            tools:ignore="UnusedAttribute" />

                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50dp"
                        android:layout_marginLeft="@dimen/_20dp"
                        android:layout_marginTop="@dimen/_15dp"
                        android:layout_marginRight="@dimen/_20dp"
                        android:visibility="gone"
                        app:cardBackgroundColor="@color/offWhite"
                        app:cardCornerRadius="@dimen/_5dp">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/referalCode"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:fontFamily="@font/opensans_regular"
                            android:gravity="center_vertical"
                            android:hint="Referral Code"
                            android:inputType="text"
                            android:paddingStart="@dimen/_10dp"
                            android:paddingEnd="@dimen/_10dp"
                            android:textSize="@dimen/_14sp"
                            tools:ignore="RtlSymmetry" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50dp"
                        android:layout_marginLeft="@dimen/_20dp"
                        android:layout_marginTop="@dimen/_15dp"
                        android:layout_marginRight="@dimen/_20dp"
                        android:onClick="onClick"
                        app:cardCornerRadius="@dimen/_5dp"
                        app:cardElevation="@dimen/_0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center">

                            <androidx.appcompat.widget.AppCompatCheckBox
                                android:id="@+id/tc"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/_30sdp"
                                android:background="@null"
                                android:fontFamily="@font/opensans_regular"
                                android:gravity="center_vertical"
                                android:inputType="text"
                                android:paddingStart="@dimen/_10dp"
                                android:paddingEnd="@dimen/_10dp"
                                android:textSize="@dimen/_14sp"
                                tools:ignore="RtlSymmetry" />

                            <TextView
                                android:id="@+id/tc_check"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_30sdp"
                                android:layout_gravity="center_vertical"
                                android:gravity="center_vertical"
                                android:hint="Terms &amp; Conditions" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_signIn"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50dp"
                        android:layout_margin="@dimen/_20dp"
                        android:onClick="onClick"
                        app:cardBackgroundColor="@color/appColor"
                        app:cardCornerRadius="@dimen/_5dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/opensans_bold"
                            android:gravity="center"
                            android:text="@string/sign_up"
                            android:textColor="@android:color/white"
                            tools:ignore="RtlSymmetry" />
                    </androidx.cardview.widget.CardView>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <View
                            android:id="@+id/view_line"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1dp"
                            android:background="@color/offWhite" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="@dimen/_10dp"
                            tools:ignore="UselessParent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/opensans_bold"
                                android:text="Already have an account?"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_18sp" />

                            <TextView
                                android:id="@+id/tv_sign_in"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_5dp"
                                android:layout_marginLeft="@dimen/_5dp"
                                android:fontFamily="@font/opensans_regular"
                                android:onClick="onClick"
                                android:text="@string/log_in"
                                android:textColor="@color/appColor"
                                android:textSize="@dimen/_16sp" />
                        </LinearLayout>


                    </RelativeLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>